--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" lang="uk" />
     <link rel="icon" type="image/svg+xml" href="./images/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>INGCO UA</title>
+    <title>Офіційний імпортер продукції INGCO</title>
   </head>
   <body>
     <div id="root"></div>
